--- a/JS.OO.0/index.html
+++ b/JS.OO.0/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script defer src="./JS.OO.0/tunes.js"></script>
+    <title>Tunes</title>
+    <script defer src="./tunes.js"></script>
 </head>
 <body>
+    <h1>Tunes</h1>
     <div id="addTune">
     
             <label for="title">Song title</label><br>
