--- a/JS.00.2/creditcard.html
+++ b/JS.00.2/creditcard.html
@@ -11,7 +11,8 @@
       <form>
         <label for="number">Creditcard number</label><br />
         <input type="number" id="number" name="number" value="" /><br />
-        <button id="validate">Validate</button>
+        <button type="button" id="validate">Validate</button>
+        <p id="isValid"></p>
         <p>Expiration date:</p>
         <label for="text">Month: </label>
         <input type="number" id="month" name="month" value="00" />
