--- a/JS.00.2/creditcard.html
+++ b/JS.00.2/creditcard.html
@@ -11,17 +11,25 @@
       <form>
         <label for="number">Creditcard number</label><br />
         <input type="number" id="number" name="number" value="" /><br />
-        <button type="button" id="validate">Validate</button>
+
         <p id="isValid"></p>
         <p>Expiration date:</p>
         <label for="text">Month: </label>
         <input type="number" id="month" name="month" value="00" />
         <label for="text">Year: </label>
         <input type="number" id="year" name="year" value="00" />
+
+
+        <br></br>
+        <label for="text">CVV: </label>
+        <input type="number" id="cvvId" name="cvv" value="" />
+        <p id="cvvIsValid"></p>
         <br /><br />
 
         <label for="text">Name</label><br />
         <input type="text" id="name" name="name" value="name" /><br />
+        <br></br>
+        <button type="button" id="validate">Validate</button>
       </form>
     </div>
   </body>
