--- a/JS.00.2/creditcard.html
+++ b/JS.00.2/creditcard.html
@@ -14,20 +14,18 @@
 
         <p id="isValid"></p>
         <p>Expiration date:</p>
-        <label for="text">Month: </label>
-        <input type="number" id="month" name="month" value="00" />
-        <label for="text">Year: </label>
-        <input type="number" id="year" name="year" value="00" />
-
-
+        <label for="text">Exp: </label>
+        <input type="number" id="month" name="month" value="" placeholder="MM"/>
+        <input type="number" id="year" name="year" value="" placeholder="YY"/>
+        <p id="isMonthAndYearValid"></p>
         <br></br>
         <label for="text">CVV: </label>
-        <input type="number" id="cvvId" name="cvv" value="" />
+        <input type="number" id="cvvId" name="cvv" value="" placeholder="000" />
         <p id="cvvIsValid"></p>
         <br /><br />
 
         <label for="text">Name</label><br />
-        <input type="text" id="name" name="name" value="name" /><br />
+        <input type="text" id="name" name="name" value="" placeholder="name" /><br />
         <br></br>
         <button type="button" id="validate">Validate</button>
       </form>
