--- a/JS.OO.4/fractions.html
+++ b/JS.OO.4/fractions.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="./rational.js"></script>
+    <script src="./fractions.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Rationals</title>
+    <title>Fractions</title>
 </head>
 <body>
     
